--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,16 @@ sysinfo.txt
 *.apk
 *.unitypackage
 
+
+
+# FROM: https://github.com/github/gitignore/blob/master/Global/Vim.gitignore
+# swap
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
